// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config schema with context {"dist":false} produces correct config 1`] = `
Object {
  "audit": Object {
    "enabled": false,
  },
  "authProviders": Array [
    "basic",
  ],
  "authorization": Object {
    "legacyFallback": Object {
      "enabled": true,
    },
  },
  "cookieName": "sid",
  "enabled": true,
  "encryptionKey": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "public": Object {},
  "secureCookies": false,
  "sessionTimeout": null,
}
`;

exports[`config schema with context {"dist":true} produces correct config 1`] = `
Object {
  "audit": Object {
    "enabled": false,
  },
  "authProviders": Array [
    "basic",
  ],
  "authorization": Object {
    "legacyFallback": Object {
      "enabled": true,
    },
  },
  "cookieName": "sid",
  "enabled": true,
  "public": Object {},
  "secureCookies": false,
  "sessionTimeout": null,
}
`;
